# CloudConfig

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: cloudconfig.rb
frontend/: next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/clients/: page.tsx
frontend/app/configs/: page.tsx
frontend/app/permissions/: page.tsx
frontend/app/projects/: page.tsx
frontend/components/: ConfigModal.tsx  ConsoleFrame.tsx  EmptyState.tsx  LoadingSkeleton.tsx  MotionProvider.tsx  StatusMessage.tsx
frontend/lib/: cloudconfig.ts  store.ts  types.ts  useAuthConfig.ts
scripts/: deploy.sh  publish.sh  setup-mac.sh  update-formula.py
src/: auth.rs  cli.rs  config.rs  crypto.rs  db.rs  error.rs  main.rs  models.rs  static_files.rs
src/routes/: admin.rs  user.rs
