[package]
name = "cloudconfig_sync_server"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15.7"
hex = "0.4.3"
libsql = { version = "0.9.29", features = ["remote", "replication"] }
mime_guess = "2.0.5"
rcgen = "0.14.7"
ring = "0.17.14"
rust-embed = { version = "8.11.0", features = ["include-exclude"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
